# docs/swagger.json
@@ -8,33 +8,6 @@
     },
     "paths": {
         "/grupo-amigos": {
-            "get": {
-                "description": "Se obtiene el grupo de amigo con el nombre indicado",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "GrupoAmigos"
-                ],
-                "summary": "Obtener el grupo de amigos con el nombre indicado",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Obtener grupo de amigos",
-                        "name": "nombre-grupo",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/modelos.GrupoAmigos"
-                        }
-                    }
-                }
-            },
             "post": {
                 "description": "Crear un nuevo grupo de amigos",
                 "produces": [
@@ -65,7 +38,36 @@
                 }
             }
         },
-        "/grupo-amigos/:nombre-grupo/amigo": {
+        "/grupo-amigos/{nombre-grupo}": {
+            "get": {
+                "description": "Se obtiene el grupo de amigo con el nombre indicado",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "GrupoAmigos"
+                ],
+                "summary": "Obtener el grupo de amigos con el nombre indicado",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Obtener grupo de amigos",
+                        "name": "nombre-grupo",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/modelos.GrupoAmigos"
+                        }
+                    }
+                }
+            }
+        },
+        "/grupo-amigos/{nombre-grupo}/amigo": {
             "post": {
                 "description": "Añadir un nuevo amigo al grupo",
                 "produces": [
@@ -103,7 +105,7 @@
                 }
             }
         },
-        "/grupo-amigos/:nombre-grupo/disponibilidad-amigo/": {
+        "/grupo-amigos/{nombre-grupo}/disponibilidad-amigo/": {
             "put": {
                 "description": "Cambiar la disponibilidad de un amigo del grupo",
                 "produces": [
@@ -141,7 +143,7 @@
                 }
             }
         },
-        "/grupo-amigos/:nombre-grupo/equipos-igualados/": {
+        "/grupo-amigos/{nombre-grupo}/equipos-igualados/": {
             "get": {
                 "description": "Obtener equipos igualados en función de los jugadores disponibles de ese equipo",
                 "produces": [
@@ -170,7 +172,7 @@
                 }
             }
         },
-        "/grupo-amigos/:nombre-grupo/niveles": {
+        "/grupo-amigos/{nombre-grupo}/niveles": {
             "put": {
                 "description": "Modificar los niveles de los jugadores que han participado en un partido en función del resultado",
                 "produces": [
